--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,10 +2,12 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}Test Application{% endblock %}</title>
+    {% block stylesheets %}{% endblock %}
 </head>
 <body>
     <div id="content">
         {% block body %}{% endblock %}
     </div>
+    {% block javascripts %}{% endblock %}
 </body>
 </html>
