--- a/templates/default/homepage.html.twig
+++ b/templates/default/homepage.html.twig
@@ -25,7 +25,7 @@
                                     <p class="card-text">{{ movie.synopsis|slice(0, 300) }}{% if movie.synopsis|length > 300 %}...{% endif %}</p>
                                     <div class="d-flex justify-content-between align-items-center">
                                         <div class="btn-group">
-                                            <a href="{{ path('movie',{'id': key,'slug':movie.headline|lower|replace({' ':'-'})}) }}" class="btn btn-sm btn-outline-secondary">View more</a>
+                                            <a href="{{ path('movie',{'id': movie.id,'slug':movie.headline|lower|replace({' ':'-'})}) }}" class="btn btn-sm btn-outline-secondary">View more</a>
                                         </div>
                                         {% if movie.duration is defined %}
                                             <small class="text-muted">{{ movie.duration/60 }} mins</small>
